# Gardarika

./: .env.example  .gitignore  AGENTS.md  README.md  gardarika_codex_contract_v1.txt  pyproject.toml  render.yaml
app/: __init__.py  main.py
app/bot/: __init__.py  dispatcher.py
app/bot/handlers/: __init__.py  admin.py  common.py
app/bot/keyboards/: __init__.py  main_menu.py
app/core/: config.py
app/db/: __init__.py  database.py  migrations.py
app/schemas/: admin.py
app/services/: clans.py  content.py  dashboard.py  economy.py  logs.py  players.py  world.py
app/web/: app.py  routes.py
app/web/static/: app.js  style.css
app/web/templates/: index.html
src/gardarika/: __init__.py  admin.py  app.py  game_engine.py  loot.py  models.py  spawn.py
tests/: conftest.py  test_battle_energy.py  test_cli_demo.py  test_spawn_and_admin.py
