[project]
name = "gardarika-bot"
version = "0.1.0"
description = "Modular Telegram RPG admin bot and web app"
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.2.0",
  "aiosqlite>=0.19.0",
  "pydantic-settings>=2.2.1",
  "aiohttp>=3.9.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.black]
line-length = 100
